objects/Product_Upgrade_Mappings__c.object
<CustomObject>
    <fields>
        <fullName>CPQ_External_Id__c</fullName>
        <label>CPQ External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the original/install base SKU</description>
        <label>Original SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Upgrade Mappings</relationshipLabel>
        <relationshipName>Product_Upgrade_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <description>Stores the price lists for which this mapping is applicable</description>
        <label>Price List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY22 Single Tier Price List</fullName>
                </value>
                <value>
                    <fullName>FY22 Single Tier Upsell Price List</fullName>
                </value>
                <value>
                    <fullName>FY21 Single Tier Price List</fullName>
                </value>
                <value>
                    <fullName>FY21 Federal Editions Price List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Like to Like</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upgraded_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the upgraded product mapping for original sku</description>
        <label>Upgraded SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Upgrade Mappings (Upgraded SKU)</relationshipLabel>
        <relationshipName>Product_Upgrade_Mappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Upgrade Mappings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Original_SKU__c</columns>
        <columns>Upgraded_SKU__c</columns>
        <columns>Price_List__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PUM-{0000}</displayFormat>
        <label>Product Upgrade Mappings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Upgrade Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>